<resources>
    <string name="app_name">Bind</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="slogan_1">Bind your thought with your favorite places</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="bind_in_your_circle">Bind in your circle</string>
    <string name="add_new_post">Add new post</string>
    <string name="what_s_in_your_mind">What\'s in your mind…?</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_comment">Add comment...</string>
    <string name="post">Post</string>
    <string name="comments">Comments</string>
</resources>