<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".app.auth.LoginFragment">


        <TextView
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40sp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/log_in"
            android:textColor="@color/gray_400"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/signupTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40sp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="46sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

        <EditText
            android:id="@+id/signupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40sp"
            android:layout_marginEnd="40sp"
            android:layout_marginTop="40sp"
            android:hint="@string/name"
            android:textColorHint="@color/black"
            android:fontFamily="@font/poppins"
            android:textSize="16sp"
            android:inputType="textPersonName"
            android:autofillHints="name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupTv" />

        <EditText
            android:id="@+id/signupEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40sp"
            android:layout_marginEnd="40sp"
            android:layout_marginTop="20sp"
            android:hint="@string/email"
            android:textColorHint="@color/black"
            android:fontFamily="@font/poppins"
            android:textSize="16sp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupName" />

        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40sp"
            android:layout_marginEnd="40sp"
            android:layout_marginTop="20sp"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:fontFamily="@font/poppins"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:autofillHints="password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupEmail" />

        <Button
            android:id="@+id/signupBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@color/blue_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>